# generic-exotic-microservices

./: .gitignore
album-app/: .env.example  API-DOCS.md  Dockerfile  Makefile  test-album-workflow.sh  test-api.sh
album-app/e2e/: run.sh
album-app/include/controllers/: AlbumController.h
album-app/include/models/: Album.h  Image.h  Share.h
album-app/src/: main.cpp
album-app/src/controllers/: AlbumController.cpp
album-app/src/db/: DatabaseUtils.cpp
album-app/src/models/: Album.cpp  Image.cpp
album-app/src/services/: AlbumService.cpp  ImageService.cpp
blogging-app/: .gitignore  API-DOCS.md  CMakeLists.txt  CURL-EXAMPLES.md  Dockerfile  Makefile  curl-commands.sh  docker-compose.yml  tbc.txt  test-album-workflow.sh  test-api.sh
blogging-app/e2e/: admin.test.sh  public.test.sh  run.sh  status-flow.test.sh
blogging-app/include/controllers/: AlbumController.h  BlogController.h
blogging-app/include/db/: Database.h  DatabaseUtils.h
blogging-app/include/models/: Album.h  BlogPost.h  Image.h  User.h
blogging-app/include/services/: AlbumService.h  BlogService.h  ImageService.h
blogging-app/include/utils/: SlugGenerator.h
blogging-app/src/: main.cpp
blogging-app/src/controllers/: AlbumController.cpp  BlogController.cpp
blogging-app/src/db/: Database.cpp
blogging-app/src/models/: Album.cpp  BlogPost.cpp  Image.cpp
blogging-app/src/services/: AlbumService.cpp  BlogService.cpp
blogging-app/src/utils/: SlugGenerator.cpp
cpp-microservice/: README.md
cpp-microservice/freelance_service/: CMakeLists.txt  Dockerfile  USER_API.md  entrypoint.sh  main.cpp
cpp-microservice/freelance_service/controllers/: LogController.cpp  LogController.h  USER_API.md  UserController.cpp  UserController.h  VaultController.cpp
cpp-microservice/freelance_service/db/: Database.cpp  Database.h  DatabaseUtils.cpp  DatabaseUtils.h
cpp-microservice/freelance_service/models/: ContactUsEntry.h  Project.cpp  Project.h  ServiceLogger.h  User.cpp  User.h  VaultEntry.h
cpp-microservice/freelance_service/plugins/: PluginManager.cpp
cpp-microservice/freelance_service/plugs/: RackSackPlugin.h
cpp-microservice/freelance_service/repositories/: ContactUsRepository.cpp  ContactUsRepository.h  LogRepository.cpp  SessionRepository.cpp  SessionRepository.h  UserRepository.cpp  UserRepository.h  VaultRepository.cpp
cpp-microservice/pistache-template/controllers/: ContactUsController.cpp  ContactUsController.h  UserController.h  VaultController.h
cpp-microservice/pistache-template/models/: ContactUsEntry.cpp  LogEntry.cpp  LogEntry.h  SessionEntry.h  UserEntry.h  VaultEntry.cpp
cpp-microservice/pistache-template/plugins/: PluginBase.h  PluginManager.h
cpp-microservice/pistache-template/plugs/: RackSackPlugin.cpp
cpp-microservice/pistache-template/repositories/: LogRepository.h  UserRepository.cpp  UserRepository.h  VaultRepository.h
golang-microservice/: README.md  config.yaml  main.go
golang-microservice/core/products/: README.txt  controller.go  model.go
golang-microservice/internal/config/: config.go
golang-microservice/internal/db/: db.go
